--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,8 @@ dependencies = [
     "PyMCubes",
     "trimesh",
     "rembg",
-    "transformers==4.34.1",
-    "diffusers==0.20.2",
+    "transformers",
+    "diffusers",
     "bitsandbytes",
     "imageio[ffmpeg]",
     "xatlas",
