Remove even more stuff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,26 +8,19 @@ authors = [
 dependencies = [
     "torch>=2.1.0",
     "torchvision",
-    "triton",
     "xformers>=0.0.25.post1",
-    "pytorch-lightning==2.1.2",
-    "gradio==3.41.2",
-    "huggingface-hub",
+    "pytorch-lightning",
+    "gradio",
     "einops",
     "omegaconf",
     "torchmetrics",
     "webdataset",
-    "accelerate",
-    "tensorboard",
-    "PyMCubes",
     "trimesh",
     "rembg",
     "transformers",
     "diffusers",
-    "bitsandbytes",
     "imageio[ffmpeg]",
     "xatlas",
-    "plyfile",
     "nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast",
     "Ninja>=1.11.1.1",
 ]
