--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,13 @@ readme = "README.md"
 license = {text = "MIT"}
 
 [build-system]
-requires = ["setuptools>=61", "wheel", "torch"]
+requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.pdm]
 distribution = true
+
+# no-isolation since dependencies build PyTorch CUDA extensions
+[tool.pdm.options]
+add = ["--no-isolation"]
+install = ["--no-isolation"]
